Added parts for jcomponent Pages

--- a/views/index.html
+++ b/views/index.html
@@ -59,51 +59,31 @@
 				<div class="single_tab"><i class="fa fa-phone"></i>Calls</div>
 			</div>
         </div>
-		<div  data---="repeater__common.chats" class="messages_section">
-				<script type="text/html">
-					<div data-id="{{ id }}" class="single_chat">
-						<div class="image_container exec" data-exec="chat">
-							<img src="{{ img }}">
-						</div>
-						<a href="/chats/{{ linker }}" class="R">
-						<div class="content_container">
-								<div class="content_container_inner">
-									<p class="user_name"> <name>{{ username }}</name> <span> {{ last_update }}</span> </p>
-									<p class="chat_content">{{ last_message }}<span>{{ message_count }}</span> </p>
-						   </div>
-						</div>
-						</a>
-						</div>
-					
-				</script>
-		</div> 
+		<div class="messages_section">
+			<div data---="page__common.page__if:chats;url:/parts/chats.html;reload:reload"></div>
+
+		</div>
+		
 
 		<div  class="android_controls">
 			<div class="botomtab_menu">
-				<div class="single_tab "><i class="fa fa-camera"></i>Camera</div>
-				<div class="single_tab "><i class="fa fa-comment-dots"></i>Chats</div>
-				<div class="single_tab"><i class="fa fa-users"></i>Groups</div>
-				<div class="single_tab"><i class="fa fa-circle-notch"></i>Status</div>
-				<div class="single_tab"><i class="fa fa-phone"></i>Calls</div>
-			</div>
+				<a href="/camera" class="R"><div class="single_tab "><i class="fa fa-camera"></i>Camera</div></a>
+				<a href="/chats" class="R"><div class="single_tab "><i class="fa fa-comment-dots"></i>Chats</div></a>
+				<a href="/groups" class="R"><div class="single_tab "><i class="fa fa-users"></i>Groups</div></a>
+				<a href="/status" class="R"><div class="single_tab "><i class="fa fa-circle-notch"></i>Status</div></a>
+				<a href="/calls" class="R"><div class="single_tab "><i class="fa fa-phone"></i>Calls</div></a>
+			
 		</div>
 	</div>
 	<script>
 		NAV.clientside('.R');
 		var common = {};
+		common.page = 'chats';
 		common.messages = [];
 		common.chats = [];
 		common.volume = 80;
-		var chats = [
-			{ id: 9 , img: '/img/profiles/louis.jpg',message_count:'88',last_update:'Now',last_message: 'Bitmart API SECRET KEY?', username: 'Saved Messages'},
-			{ id: 1 , img: '/img/profiles/agape.jpg',message_count:'3',last_update:'12:09 PM',last_message: 'I have understand you...', username: 'Agape Raston'},
-			{ id: 2 , img: '/img/profiles/chris.jpg',message_count:'2',last_update:'02:09 AM',last_message: 'Where is your Bugatti????', username: 'Kinda Christian'},
-			{ id: 3 , img: '/img/profiles/maman.jpg',message_count:'5',last_update:'05:09 AM',last_message: 'Du courage...', username: 'Dear Maman'},
-			{ id: 6 , img: '/img/profiles/peter.jpg',message_count:'1',last_update:'06:09 AM',last_message: 'It depends on you', username: 'Peter Sirka'},
-			{ id: 8 , img: '/img/profiles/elon.jpg',message_count:'6',last_update:'Yesterday',last_message: 'That 6 months can change your life...', username: 'Elon Musk'},
-			{ id: 7 , img: '/img/profiles/sonny.jpg',message_count:'8',last_update:'Monday',last_message: 'Reveille le lion qui dors en toi...', username: 'Sonny Court'},
-			{ id: 4 , img: '/img/profiles/edith.jpg',message_count:'9',last_update:'Last Week',last_message: 'Ce n\'est pas un probleme', username: 'Edith'},
-			{ id: 5 , img: '/img/profiles/bro.jpg',message_count:'5',last_update:'Last Month',last_message: 'Tu es au bureau?', username: 'Blood brother'}
+		common.chat_list = [
+			
 		];
 		common.messages.push({ "id": 1 , "author": "Agape Raston", "body":"Hi Louis","timestamp":"24 Nov 2021","incoming" : false});
 		common.messages.push({ "id": 2 , "author": "Agape Raston", "body":"How are you?","timestamp":"24 Nov 2021","incoming" : false});
@@ -120,38 +100,11 @@
 		common.messages.push({ "id": 13 , "author": "Louis Bertson", "body":"thanks","timestamp":"24 Nov 2021","incoming" : true});
 	
 
-		for( var i = 0, len = chats.length; i < len; i ++){
-			chats[i].linker = chats[i].username.slug();
-			common.chats.push(chats[i]);
-		}
-		function chat(e){
-			console.log($(e));
-			var image = $(e).children('img').attr('src');
-			var name = $(e).parent().find('.user_name name').text(); 
-			$('.lightbox_name').text(name);
-			$('.lightbox_image img').attr('src',image);
-			$('.lightbox').css('display','flex');
-			$('.lightbox').animate({opacity : 1},500);
-			$('.lightbox_container').show();
-
-
-			$('.lightbox').click(function(e){
-				console.log('clicked');
-				var q = $(this);
-				if($(e.target).attr('class') == 'lightbox'){
-					 q.animate({opacity : 0},200);
-					 $('.lightbox_container').hide('slow');
-					 $('.lightbox_image img').attr('src','');
-					 setTimeout(function(){
-						q.css('display','none');
-					 },200);
-				}
-			});
-		}
+		
 		
 		ROUTE('/chats/{ linker }/',function(){
-			var controller = this;
-			console.log(controller);	
+	
+				
 		})
     
 
