--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,17 +15,17 @@
     width: 90vw;
     box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75) ;
 }
-.fa {
+.ion {
     cursor :pointer;
-    font-size: 24px;
-    opacity: 0.7;
-    margin-right: 2vw;
-    font-weight: lighter;
+    font-size: 35px;
+    padding: 2px 3px;
+    
+    
 }
-.fa:hover {
+
+.ion:hover {
     border-radius: 100%;
-    opacity: 0.2;
-    transition-duration: 0.1s;
-    transition-timing-function: ease-in;
+    opacity: 0.9;
+    
 }
 
